[package]
name = "generator"
version = "0.0.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/lspt"
license = "MIT"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
heck = "0.5"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "3.0"
