[package]
name = "lspt"
version = "0.1.0"
description = "Language Server Protocol (LSP) types made easy."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/lspt"
license = "MIT"
edition = "2021"
keywords = ["lsp"]

[dependencies]
indexmap = { version = "2.7", features = ["serde"], optional = true }
rustc-hash = { version = "2.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5", features = ["serde"], optional = true }

[features]
indexmap = ["dep:indexmap"]
proposed = []
rustc-hash = ["dep:rustc-hash"]
url = ["dep:url"]

[package.metadata.docs.rs]
features = ["proposed"]
