[package]
name = "lspt"
version = "0.3.0"
description = "Language Server Protocol (LSP) types made easy."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/lspt"
license = "MIT"
edition = "2024"
keywords = ["lsp"]

[dependencies]
indexmap = { version = "2.13", features = ["serde"], optional = true }
rustc-hash = { version = "2.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5", features = ["serde"], optional = true }

[features]
default = ["rustc-hash"]
proposed = []

[package.metadata.docs.rs]
features = ["proposed"]
